<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TextingClubActivity">

    <EditText
        android:id="@+id/recipientEt"
        android:layout_marginTop="100dp"
        android:hint="@string/enter_recipient_emailid_s"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/subjectEt"
        android:hint="@string/enter_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:importantForAutofill="no" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/messageEt"
        android:inputType="text"
        android:hint="@string/enter_the_message"
        android:minHeight="180dp"
        android:layout_marginTop="10dp"
        android:importantForAutofill="no" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendEmailBtn"
        android:layout_gravity="end"
        android:text="@string/send_email"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp" />

</LinearLayout>