<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/userinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_info"
                android:textStyle="bold"
                android:background="@color/colorPirmaryLight" />

            <Button
                android:id="@+id/myevents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@color/colorPirmaryLight"
                android:text="@string/my_events"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/Logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/logout"
                android:textStyle="bold"
                android:background="@color/colorPirmaryLight" />

        </LinearLayout>
    </RelativeLayout>

</ScrollView>