<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisteredEventsInfo">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/EventDetials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_details"
                android:textStyle="bold"
                android:background="@color/colorPirmaryLight" />

            <Button
                android:id="@+id/TextHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/text_event_head"
                android:textStyle="bold"
                android:background="@color/colorPirmaryLight" />

            <Button
                android:id="@+id/UnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="60dp"
                android:background="@color/colorTrendingStart"
                android:text="@string/unregister"
                android:textStyle="bold" />


        </LinearLayout>
    </RelativeLayout>

</ScrollView>